--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve   --poll=2000  --public-host=0.0.0.0/g67kQ88VG71564172_op/sockjs-node --host 0.0.0.0 --port 4200 --disable-host-check",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
